# python-project-50

./: README.md  pyproject.toml
gendiff/: __init__.py  main.py
gendiff/script/: compare_files.py  get_json.py  get_print.py  get_yaml.py  stylish.py
modules/: main.py
modules/script/: compare_files.py  get_file_extension.py  get_json.py  get_print.py  get_yaml.py  load_file.py  main.py
tests/: Makefile  test_main.py
