[project]
name = "hexlet-code"
version = "0.1.0"
description = "Difference Finder"
authors = [
    { name = "Elena", email = "donna_vld@mail.ru" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["modules"]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]

[project.scripts]
gendiff = "modules.script.main:main"
